apps/matter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8482
